--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -10,63 +10,40 @@ metadata:
 train_audio:
     type: PartitionedDataSet
     path: gcs://thesis_video_files/train
-    dataset: thesis_project.datasets.AudioDataSetBucket
+    dataset: ecir_project.datasets.AudioDataSetBucket
     filename_suffix: .wav
 
 train_video:
     type: PartitionedDataSet
     path: gcs://thesis_video_files/train
-    dataset: thesis_project.datasets.VideoDataSetBucket
+    dataset: ecir_project.datasets.VideoDataSetBucket
     filename_suffix: .mp4
     
 validation_audio:
     type: PartitionedDataSet
     path: gcs://thesis_video_files/validation
-    dataset: thesis_project.datasets.AudioDataSetBucket
+    dataset: ecir_project.datasets.AudioDataSetBucket
     filename_suffix: .wav
 
 validation_video:
     type: PartitionedDataSet
     path: gcs://thesis_video_files/validation
-    dataset: thesis_project.datasets.VideoDataSetBucket
+    dataset: ecir_project.datasets.VideoDataSetBucket
     filename_suffix: .mp4
     
 test_audio:
     type: PartitionedDataSet
     path: gcs://thesis_video_files/test
-    dataset: thesis_project.datasets.AudioDataSetBucket
+    dataset: ecir_project.datasets.AudioDataSetBucket
     filename_suffix: .wav
 
 test_video:
     type: PartitionedDataSet
     path: gcs://thesis_video_files/test                                              
-    dataset: thesis_project.datasets.VideoDataSetBucket
+    dataset: ecir_project.datasets.VideoDataSetBucket
     filename_suffix: .mp4
 
 
 
 
     
-#audio_files:
-#  type: PartitionedDataSet
-#  dataset: thesis_project.datasets.AudioDataSet
-#  path: /Users/xite/Documents/thesis/videos/audio
-#  filename_suffix: .wav
-
-#video_files:
-#  type: PartitionedDataSet
-#  dataset: thesis_project.datasets.VideoDataSet
-#  path: /Users/xite/Documents/thesis/videos/mp4
-#  filename_suffix: .mp4
-
-#kinetic_files:
-#  type: PartitionedDataSet
-#  dataset: thesis_project.datasets.VideoDataSet
-#  path: /Users/xite/Documents/thesis/kinetics400
-#  filename_suffix: .mp4
-
-#audio_files:
-#    type: PartitionedDataSet
-#    dataset: thesis_project.datasets.AudioDataSetBucket
-#    path: gs://thesis_video_files/audio
-#    filename_suffix: .wav
