--- a/conf/emb/catalog.yml
+++ b/conf/emb/catalog.yml
@@ -10,36 +10,36 @@ metadata:
 train_audio:
     type: PartitionedDataSet
     path: /data-gpu/audio_train
-    dataset: thesis_project.datasets.EmbeddingDataSet
+    dataset: ecir_project.datasets.EmbeddingDataSet
     filename_suffix: .pt
 
 train_video:
     type: PartitionedDataSet
     path: /data-gpu/video_train
-    dataset: thesis_project.datasets.EmbeddingDataSet
+    dataset: ecir_project.datasets.EmbeddingDataSet
     filename_suffix: .pt
     
 val_audio:
     type: PartitionedDataSet
     path: /data-gpu/audio_val
-    dataset: thesis_project.datasets.EmbeddingDataSet
+    dataset: ecir_project.datasets.EmbeddingDataSet
     filename_suffix: .pt
 
 val_video:
     type: PartitionedDataSet
     path: /data-gpu/video_val
-    dataset: thesis_project.datasets.EmbeddingDataSet
+    dataset: ecir_project.datasets.EmbeddingDataSet
     filename_suffix: .pt
 
 test_audio:
     type: PartitionedDataSet
     path: /data-gpu/audio_test 
-    dataset: thesis_project.datasets.EmbeddingDataSet
+    dataset: ecir_project.datasets.EmbeddingDataSet
     filename_suffix: .pt
 
 test_video:
     type: PartitionedDataSet
     path: /data-gpu/video_test
-    dataset: thesis_project.datasets.EmbeddingDataSet
+    dataset: ecir_project.datasets.EmbeddingDataSet
     filename_suffix: .pt
     
